--- a/kube/deployment.yaml
+++ b/kube/deployment.yaml
@@ -1,17 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: inbox-ms
-  labels:
-    app: inbox-ms
-    service: inbox-ms
-spec:
-  ports:
-  - port: 3001
-    name: http
-  selector:
-    app: inbox-ms
----
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -29,7 +15,7 @@ spec:
     spec:
       containers:
       - name: inbox-ms
-        image: andreleoni/inbox-microservice:639ea58
+        image: $$DOCKER_IMAGE
         args: ["rails s -p 3001 -b 0.0.0.0"]
         imagePullPolicy: IfNotPresent
         env:
@@ -50,4 +36,3 @@ spec:
               key: "secret-key-base"
         ports:
         - containerPort: 3001
----
