improve travis to have a staging environment

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,16 @@ script:
 - bundle exec rspec
 
 deploy:
-  provider: script
-  script: ./deploy.sh
-  on:
-    branch: master
+  - provider: script
+    script: ./deploy-staging.sh
+    skip_cleanup: true
+    on:
+      branch: development
+  - provider: script
+    script: ./deploy-production.sh
+    skip_cleanup: true
+    on:
+      branch: master
 
 before_install:
 - openssl aes-256-cbc -K $encrypted_b3b467c0d736_key -iv $encrypted_b3b467c0d736_iv
