--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ services:
 env:
   global:
   - CLOUDSDK_CORE_DISABLE_PROMPTS=1
+  - RAILS_ENV=test
 
 script:
 - bundle exec rspec
@@ -23,6 +24,8 @@ deploy:
       branch: development
   - provider: script
     script: ./deploy-production.sh
+    keyfile: client-secret.json
+    project: "microserviceevaluation"
     skip_cleanup: true
     on:
       branch: master
