--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,41 @@
-branches:
-  only:
-  - master
+# Use Dockerized infrastructure
+sudo: false
+language: ruby
+# Cache our Gcloud SDK between commands
 cache:
   directories:
-  - "$HOME/google-cloud-sdk"
-
-services:
-- docker
-
+  - "$HOME/google-cloud-sdk/"
 env:
-  global:
-  - CLOUDSDK_CORE_DISABLE_PROMPTS=1
-  - RAILS_ENV=test
-
-script:
-- bundle exec rspec
-
-deploy:
-  - provider: script
-    script: ./deploy-staging.sh
-    skip_cleanup: true
-    on:
-      branch: development
-  - provider: script
-    script: ./deploy-production.sh
-    keyfile: client-secret.json
-    project: "microserviceevaluation"
-    skip_cleanup: true
-    on:
-      branch: master
-
+# Make sure gcloud command is on our PATH and the App Engine SDK is in the Python path
+- GAE_PYTHONPATH=${HOME}/.cache/google_appengine PATH=$PATH:${HOME}/google-cloud-sdk/bin PYTHONPATH=${PYTHONPATH}:${GAE_PYTHONPATH} CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
-- openssl aes-256-cbc -K $encrypted_b3b467c0d736_key -iv $encrypted_b3b467c0d736_iv
-  -in client-secret.json.enc -out client-secret.json -d
+# Install Google App Engine Python SDK
+- if [ ! -d "${GAE_PYTHONPATH}" ]; then
+    python scripts/fetch_gae_sdk.py $(dirname "${GAE_PYTHONPATH}");
+  fi
+# [START auth]
+# Decrypt the credentials we added to the repo using the key we added with the Travis command line tool
+- openssl aes-256-cbc -K $encrypted_4cd12b3bd1e7_key -iv $encrypted_4cd12b3bd1e7_iv -in credentials.tar.gz.enc -out credentials.tar.gz -d
+# If the SDK is not already cached, download it and unpack it
+- if [ ! -d ${HOME}/google-cloud-sdk ]; then
+     curl https://sdk.cloud.google.com | bash;
+  fi
+- tar -xzf credentials.tar.gz
+- mkdir -p lib
+# Here we use the decrypted service account credentials to authenticate the command line tool
+- gcloud auth activate-service-account --key-file client-secret.json
+# [END auth]
+install:
+# Set the correct project to deploy to
+- gcloud config set project microserviceevaluation
+# Install the project dependencies
+- bundle install
+script:
+#-  Run the unit tests
+- bundle exec rspec
+# [START deploy]
+# Deploy the app
+- cat kube/deployment.yaml | sed s/\$\$DOCKER_IMAGE/andreleoni\\/inbox-microservice:latest/g | kubectl apply -f -
+# Run and end to end test
+#- python e2e_test.py
+# [END deploy]
