--- a/.travis.yml
+++ b/.travis.yml
@@ -1,34 +1,19 @@
 # Use Dockerized infrastructure
 sudo: false
-language: ruby
-# Cache our Gcloud SDK between commands
-cache:
-  directories:
-  - "$HOME/google-cloud-sdk/"
+language: python
 before_install:
-# [START auth]
 # Decrypt the credentials we added to the repo using the key we added with the Travis command line tool
 - openssl aes-256-cbc -K $encrypted_4cd12b3bd1e7_key -iv $encrypted_4cd12b3bd1e7_iv -in credentials.tar.gz.enc -out credentials.tar.gz -d
 # If the SDK is not already cached, download it and unpack it
-- if [ ! -d ${HOME}/google-cloud-sdk ]; then
-     curl https://sdk.cloud.google.com | bash;
-  fi
 - tar -xzf credentials.tar.gz
 - mkdir -p lib
-# Here we use the decrypted service account credentials to authenticate the command line tool
-- gcloud auth activate-service-account --key-file client-secret.json
-# [END auth]
 install:
-# Set the correct project to deploy to
-- gcloud config set project microserviceevaluation
-# Install the project dependencies
 - bundle install
 script:
-#-  Run the unit tests
-- bundle exec rspec
-# [START deploy]
-# Deploy the app
-- cat kube/deployment.yaml | sed s/\$\$DOCKER_IMAGE/andreleoni\\/inbox-microservice:latest/g | kubectl apply -f -
-# Run and end to end test
-#- python e2e_test.py
-# [END deploy]
+- echo "No Script to run"
+deploy:
+    provider: gae
+    keyfile: client-secret.json
+    project: 	microserviceevaluation
+    script: ./deploy-production.sh
+    default: true
