--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,21 @@
 # Use Dockerized infrastructure
 sudo: false
-language: python
+
+language: ruby
+
 before_install:
 # Decrypt the credentials we added to the repo using the key we added with the Travis command line tool
 - openssl aes-256-cbc -K $encrypted_4cd12b3bd1e7_key -iv $encrypted_4cd12b3bd1e7_iv -in credentials.tar.gz.enc -out credentials.tar.gz -d
 # If the SDK is not already cached, download it and unpack it
 - tar -xzf credentials.tar.gz
 - mkdir -p lib
+
 install:
 - bundle install
+
 script:
 - echo "No Script to run"
+
 deploy:
     provider: gae
     keyfile: client-secret.json
