--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: andreleoni/inbox-ms:latest
+      - image: andreleoni/inbox-ms-circleci:latest
     working_directory: ~/app
     environment:
       DEPLOYMENT_NAME: inbox-ms-v1
